fixed overflow text

--- a/src/components/todo.css
+++ b/src/components/todo.css
@@ -241,6 +241,12 @@ input:focus {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: 400px;
+}
+
+.list-item-line {
+  text-align: start;
+  text-overflow: wrap;
 }
 
 @media screen and (max-width: 600px) {
@@ -266,6 +272,7 @@ input:focus {
   .eachItem {
     padding: 0.5rem 0.4rem;
     min-width: 35rem;
+    max-width: 35rem;
   }
   .showItems .eachItem h3 {
     font-size: 1.3rem;
